--- a/Solution/HomeWork/HomeWork.csproj
+++ b/Solution/HomeWork/HomeWork.csproj
@@ -24,4 +24,8 @@
     <Resource Include="Images\wolf.jfif" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
+  </ItemGroup>
+
 </Project>
