--- a/Solution/HomeWork/HomeWork.csproj
+++ b/Solution/HomeWork/HomeWork.csproj
@@ -28,4 +28,10 @@
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.135" />
   </ItemGroup>
 
+  <ItemGroup>
+	<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+	<_Parameter1>HomeWork.Tests</_Parameter1>
+	</AssemblyAttribute>  
+  </ItemGroup>
+
 </Project>
